<?xml version="1.0" encoding="utf-8"?>
   <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_add__transport2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

 <RelativeLayout
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
     android:focusable="true"
    android:layout_height="match_parent"
    tools:activitycontext="tn.android.etransport.etransport.Add_Transport2">

    <ImageButton
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:id="@+id/close_BTN2"
        android:background="@null"
        android:src="@android:drawable/btn_dialog" />
    <!--<Spinner-->
        <!--android:id="@+id/times"-->
        <!--android:layout_width="96dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginBottom="15dp"-->
        <!--android:layout_marginTop="15dp"/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lavel_date_go"
        android:id="@+id/label_date_go"
        android:layout_below="@+id/close_BTN2"
        android:layout_marginBottom="@dimen/between_fields_vertical_margin"
        android:layout_alignParentLeft="true"/>

    <DatePicker
        android:id="@+id/dates_transport_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:datePickerMode="spinner"
        android:layout_below="@id/label_date_go"/>
        <!--android:layout_toLeftOf="@+id/times"-->
        <!--android:layout_alignBottom="@+id/times"-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date_arrival"
        android:id="@+id/label_date_arrive"
        android:layout_below="@+id/dates_transport_go"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"/>

    <DatePicker
        android:id="@+id/dates_transport_arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:datePickerMode="spinner"
        android:layout_below="@id/label_date_arrive"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Go_time"
        android:id="@+id/label_time_go"
        android:layout_below="@+id/dates_transport_arrival"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"/>
    <TimePicker
        android:id="@+id/times_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_time_go"
        android:timePickerMode="spinner"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Arrive_time"
        android:id="@+id/label_time_arrive"
        android:layout_below="@+id/times_go"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"/>
    <TimePicker
        android:id="@+id/times_arrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_time_arrive"
        android:timePickerMode="spinner"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="10dp"
        android:id="@+id/description_transport"
        android:hint="@string/transport_description"
        android:layout_below="@+id/times_arrive"
        android:layout_alignParentLeft="true"
       />

    <Button
        android:id="@+id/BTN_transport_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/description_transport"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/done" />

 </RelativeLayout>
</ScrollView>