<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/bg3"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Login progress -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textSize="@dimen/text_size"
                android:layout_marginBottom="@dimen/small_dimen_between_fields"
                android:inputType="textEmailAddress"
                android:layout_marginTop="120dp"
                android:maxLines="1"
                android:gravity="center"
                android:background="@drawable/buttonshape"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:hint="@string/prompt_password"
                android:gravity="center"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@drawable/buttonshape"
                android:singleLine="true" />

            <com.rey.material.widget.Button
                android:background="@drawable/buttonshapebackgroundcolored"
                app:rd_cornerRadius="35dp"
                app:rd_enable="true"
                app:rd_backgroundColor="@color/White"
                android:textColor="@color/White"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rd_delayClick="afterRelease"
                android:layout_marginTop="6dp"
                android:id="@+id/email_sign_in_button"
                android:text="@string/action_sign_in_short"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:id="@+id/BTN_forgetpassword"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:gravity="top|center"
                android:background="@android:color/transparent"
                android:text="@string/forget_password" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/BTN_subscription"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:gravity="top|center"
                android:background="@android:color/transparent"
                android:text="@string/subscribe" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
